--- a/index.Rmd
+++ b/index.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "A walk through the woods"
+title: "Analysis of Data on the Existing Coastal and Marine Protected Areas"
 site: bookdown::bookdown_site
 output: bookdown::gitbook #bookdown::html_document2
 documentclass: book
-github-repo: atellezcastr/walkThroughWoodsGuide
-description: "Guide a to Walk through woods Assignment"
+github-repo: atellezcastr/BIOL4650-marine_conservation
+description: "Guide to help in analyzing data of coastal and marine protected areas"
 ---
 
 # Getting started and Learning R {-}
