--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@ title: "Analysis of Data on the Existing Coastal and Marine Protected Areas"
 site: bookdown::bookdown_site
 output: bookdown::gitbook #bookdown::html_document2
 documentclass: book
-github-repo: atellezcastr/BIOL4650-marine_conservation
+github-repo: jbaafi/BIOL4650-marine_conservation
 description: "Guide to help in analyzing data of coastal and marine protected areas"
 ---
 
@@ -13,7 +13,7 @@ If you have not used `R` previously, we recommend that you work through Chapters
 
 # How to do the analysis in R {-}
 
-## Scatter plot and correlation {-}
+## Data importation and Filtering {-}
 
 Let's explore the _protected areas_ data!
 
@@ -55,23 +55,20 @@ head(data1)
 names(data1)
 ```
 
-7.  It is now helpful to think about the data given your knowledge of Botany. Do you hypothesize a relationship between the data in any of the columns? You might start investigating your hypotheses by making a plot, for example, showing the `Average cross-sectional vessel area` and `the number of vessels`. To extract a column of the data, see [Handling the data](https://ahurford.github.io/quant-guide-all-courses/handling-data.html). You may use either Approach 1: base R or Approach 2: `dplyr` (generally, the `dplyr` commands tend to be simpler, however, it is good to also know the base R commands).
+7. To extract a column of the data, see [Handling the data](https://ahurford.github.io/quant-guide-all-courses/handling-data.html). You may use either Approach 1: base R or Approach 2: `dplyr` (generally, the `dplyr` commands tend to be simpler, however, it is good to also know the base R commands).
 
 **Approach 1: Base R**
 
-For the `Average cross sectional vessel area`, in the `Console`, try:
+To view the `MARINE`, column of the data in the `Console`, try:
 
 ```{r, results=FALSE}
-data1$A.mm
+data1$MARINE
 ```
 
-Be sure to type exactly `A.mm` after the `$`. Try making your plot:
+Be sure to type exactly `MARINE` after the `$`.
 
-```{r}
-plot(data1$N.mm,data1$A.mm, pch = 19, xlab = "Average cross sectional vessel area", ylab = "Number of vessels per unit cross sectional area", col="blue")
-```
 
-You need to write the column names exactly as they appear in the output of `names(data1)` or RStudio will produce an error.
+You need to write the column name exactly as it appear in the output of `names(data1)` or RStudio will produce an error. Remember `MARINE` is captalized in the data frame so be careful not to type `Marine` which will come out as an error. 
 
 **Approach 2: dplyr**
 
@@ -81,109 +78,16 @@ To use the [`dplyr` functions](https://ahurford.github.io/quant-guide-all-course
 library(dplyr)
 ```
 
-For the `Average cross sectional vessel area`, in the `Console`, try:
+For the `MARINE`, in the `Console`, try:
 
 ```{r, results = F}
-select(data1, A.mm)
+select(data1, MARINE)
 ```
 
-Note that the output of `select(data1, A.mm)` is a data frame, but the plot function when used as `plot(x,y)` the `x` and `y` should be a vector. To make the same plot, but using `dplyr` functions, try:
+Note that the output of `select(data1, MARINE)` is a data frame.
 
-```{r}
-p = data.frame(select(data1, A.mm), select(data1, N.mm))
-plot(p, pch = 19, xlab = "Average cross sectional vessel area",ylab = "Number of vessels per unit cross sectional area", col="blue")
-```
-
-8.  Can you make a [plot](https://ahurford.github.io/quant-guide-all-courses/graph.html#scatter-plots-with-plotxy) of different variables, for example, _Wood density_ and _Average of the absolute value of latitude_?
-
-9.  What happens if you type `plot(data1$Family, data1$Binomial)` in the `Console`? Why is this not a very sensible choice for something to plot?
-
-10. To analyze the relationship between variables we can use the `cor(x,y,method = "pearson")` function. See [Correlation](https://ahurford.github.io/quant-guide-all-courses/statistics.html#correlation) for details. Can you find the correlation coefficient for two variables in the `woods.csv` data set? If you plot these same two variables do you see a relationship?
-
-## Comparing two means with a t.test {-}
-
-This section will give a brief overview of how to perform a sample t-test to compare the average cross-sectional vessel area between two families: Rhamnaceae and Fabaceae. This example is to illustrate the coding for the analysis; you will want to use your knowledge of Botany to formulate a hypothesis to test.
-
-1.  First, produce two variables that contain the data.
-
-**Approach 1: Base R**
-```{r, results=F}
-Rhamnaceae = data1[data1$Family=="Rhamnaceae",]
-Fabaceae = data1[data1$Family=="Fabaceae",]
-```
-
-Note that we are using `[]` to extract specific rows and columns of `data1`. Observe that `data1$Family=="Rhamnaceae"` means we want all the rows where the family is "Rhamnaceae", and the `,` indicates we would like all the columns. Type the following to understand more about these variables:
+8.  We want to separate protected areas identified as exclusively terrestrial from those that include marine areas. Try this in the `Console`:
 
 ```{r, results=F}
-head(Rhamnaceae)
-head(Fabaceae)
-length(Rhamnaceae[,1])
-length(Fabaceae[,1])
+filter(data1, MARINE == 0)
 ```
-
-The command `head()` reports the first 6 rows, and `length(Rhamnaceae[,1])` gives the length of column 1 of the variable `Rhamnaceae`.
-
-**Approach 2: dplyr**
-
-```{r, results=F}
-Rhamnaceae = filter(data1,Family=="Rhamnaceae")
-Fabaceae = filter(data1,Family=="Fabaceae")
-```
-
-You can also learn more about the data by using `length()` and `head()` as for the base R approach described above. To learn more about these functions see [here](https://ahurford.github.io/quant-guide-all-courses/handling-data.html#base-r).
-
-2.  We would like to perform a t-test to compare the means of the average cross-sectional vessel area for Rhamnaceae and Fabaceae, however, before we do this we will graph these data to observe if we expect the t-test to find a significant difference in means. An instructive graph to make is a boxplot, since this will allow us to visualize the median value for each of the two families, as well as other quantiles, and extreme values.
-
-Using the `boxplot()` function requires the data to be arranged in a data frame with a specific organization:
-
-**Approach 1: Base R**
-```{r}
-data = data.frame(Family = c(Rhamnaceae$Family,Fabaceae$Family), Area = c(Rhamnaceae$A.mm, Fabaceae$A.mm))
-```
-
-To see the resulting data frame, `data`, run these commands:
-```{r}
-head(data)
-tail(data)
-```
-
-Note that `c()` binds lists together, and in the `Family` column of the new [data frame](https://ahurford.github.io/quant-guide-all-courses/rintro.html#data-structures) `data`, we need the value from the `$Family` column to be `Rhamnaceae` or  `Fabaceae`. In the `Area` column of `data` we need the average cross-sectional area of the vessels `$A.mm`. 
-
-**Approach 2: dplyr**
-
-In `dplyr`, we can make the data frame, `data`, by using [`select()`](https://ahurford.github.io/quant-guide-all-courses/handling-data.html#selecting-a-column) to choose columns, and [`filter()`](https://ahurford.github.io/quant-guide-all-courses/handling-data.html#filtering-data) to keep the families of interest. We can do this efficiently using [pipes](https://ahurford.github.io/quant-guide-all-courses/handling-data.html#pipes):
-
-```{r}
-data = select(data1,Family, Area=A.mm) %>%
-  filter(Family=="Rhamnaceae"|Family=="Fabaceae")
-tail(data)
-```
-
-**Both approaches**
-
-If we have made a data frame with the correct structure, then we can use the `boxplot()` command to visualize the average cross sectional area for vessels of plants from the families `Rhamnaceae` and  `Fabaceae`.
-
-```{r, results=T}
-boxplot(Area~Family, data, ylab = "Av. cross-sectional area of vessels (mm)")
-```
-
-Note that the rectangle for the boxplot is the interquartile range (from the 25th to 75th percentiles of our data). The 25th percentile means that only 25% of `Rhamnaceae` and  `Fabaceae` species have average cross-sectional vessel areas less than these values. From this box plot, it appears that the mean of the average cross-sectional vesseal area for Rhamnaceae species is different than for Fabaceae species, suggesting that we might expect the t-test to give a significant result.
-
-4.  Performing a [t-test](https://ahurford.github.io/quant-guide-all-courses/statistics.html#t.test)) allows us to determine if the groups are statistically different and measures the probability that an observed difference could have occurred just by random chance. Here, we want to evaluate $\alpha = 0.05$, indicating that we are comfortable with a 5% risk of concluding a difference exists when there is no difference. If our p-value is greater than $\alpha$, both means are not statistically different.
-
-
-```{r}
-t.test(Rhamnaceae$A.mm, Fabaceae$A.mm, alternative = 'two.sided',paired = FALSE)
-```
-
-or, using `dplyr`:
-
-```{r}
-Rham.area = filter(data1,Family == "Rhamnaceae") %>% select(A.mm)
-Faba.area = filter(data1,Family == "Fabaceae") %>% select(A.mm)
-t.test(Rham.area, Faba.area)
-```
-
-Given the p-value of $1.76 \times 10^{-10}$, which is less than $\alpha = 0.05$, we reject our null hypothesis that the mean cross-sectional area of vessels is the same for Rhamnaceae and Fabaceae species. Therefore, our analysis suggest that the average cross-section vessel area for species of these Families are different.
-
-
