--- a/index.Rmd
+++ b/index.Rmd
@@ -114,3 +114,18 @@ The median size of the coastal MPAs can lso be found by running a similar code a
 ```{r, results=F}
 median(data2$REP_AREA)
 ```
+11. Now we would like to calculate the amount of area that is strongly protected. We can do this by grouping by the `IUCN_CAT` column of the dataset and summing the `REP_AREA` accordingly. Let's run this code in the `Console`
+```{r, results=F}
+data1 %>% group_by(IUCN_CAT) %>% summarise(REP_AREA = sum(REP_AREA))
+```
+
+12. We also calculate the number of areas under each level of protection by running the following code in the `Console`
+```{r, results=F}
+data1 %>% group_by(IUCN_CAT) %>% summarise(n())
+```
+
+
+
+
+
+
