--- a/index.Rmd
+++ b/index.Rmd
@@ -114,18 +114,38 @@ The median size of the coastal MPAs can lso be found by running a similar code a
 ```{r, results=F}
 median(data2$REP_AREA)
 ```
-11. Now we would like to calculate the amount of area that is strongly protected. We can do this by grouping by the `IUCN_CAT` column of the dataset and summing the `REP_AREA` accordingly. Let's run this code in the `Console`
+
+## Graphing {-}
+
+This section will give a brief overview of how to use graphs to understand some key concepts from the data which would be difficult to understand by just studying the raw data.
+
+1. First, we would like to graph the the number of areas in each level of protection. To do this, we will have to count the number of areas in each level of protection by running this code in the `Console` 
 ```{r, results=F}
-data1 %>% group_by(IUCN_CAT) %>% summarise(REP_AREA = sum(REP_AREA))
+data2 <- data1 %>% group_by(IUCN_CAT) %>% summarise(n())
 ```
 
-12. We also calculate the number of areas under each level of protection by running the following code in the `Console`
+Now we delete the rows that has `NAs` by running this
+
 ```{r, results=F}
-data1 %>% group_by(IUCN_CAT) %>% summarise(n())
+data2 <- data2[-c(6, 7, 8), ] 
+```
+Now we can use a barplot to show the number of areas under each level of protection. The following code is able to do this
+
+```{r, results=F}
+barplot(data2$`n()`, ylab="number(No. of areas)",
+        names.arg=c("Ia","Ib","II","III","IV","V","VI"), las=3, main="Number of areas for each level of protection")
 ```
 
+2. Now we would like to calculate the amount of area that is strongly protected. We can do this by grouping by the `IUCN_CAT` column of the dataset and summing the `REP_AREA` accordingly. Let's run this code in the `Console`
+```{r, results=F}
+data3 <- data1 %>% group_by(IUCN_CAT) %>% summarise(REP_AREA = sum(REP_AREA))
+```
 
+The barplot showing the area allocations could be plotted by running this code in the `Console`
 
-
+```{r, results=F}
+barplot(data3$REP_AREA, ylab="Area(Amt. land and water area/km^2)",
+        names.arg=c("Ia","Ib","II","III","IV", "NA", "NA","NR" ,"V", "VI"), las=3, main="Area of land and water for each level of protection")
+``` 
 
 
