added a few lines of base R codes

--- a/index.Rmd
+++ b/index.Rmd
@@ -211,7 +211,11 @@ data4 <- data3 %>%
 
 **Approch 2: base R**
 
-Joseph add code here
+```{r, results=F}
+data4 <- aggregate(cbind(n = WDPAID) ~ IUCN_CAT, 
+          data = data3, 
+          FUN = function(x){NROW(x)})
+```
 
 **Both approaches**
 
@@ -245,7 +249,9 @@ data5 <- data3 %>%
 ```
 
 **Approach 2: base R**
-[Joesph add here]
+```{r, eval=F}
+data5 <- aggregate(GIS_M_AREA ~ IUCN_CAT, data3, sum)
+```
 
 **Both approaches**
 
@@ -275,7 +281,7 @@ hist(data3$GIS_M_AREA, breaks = 50,
 We can plot these results on a logarithm scale as:
 
 ```{r}
-hist(log(data3$GIS_M_AREA), breaks = 50, xlab = "x label here", ylab = "y label here")   # Histogram with logarithmic axis
+hist(log(data3$GIS_M_AREA), breaks = 50, xlab = "log of the size of MPAs", ylab = "Frequency")   # Histogram with logarithmic axis
 ```
 
 We can use a barplot to show the number of areas under each level of protection from the data contained in `data4`. Remember that `data4` has two columns:
